@@ -355,7 +355,7 @@ languages.
 
 If you're not convinced that you need this, have a look at [https://www.w3.org/International/questions/qa-site-conneg#yyyshortcomings](https://www.w3.org/International/questions/qa-site-conneg#yyyshortcomings) for some rationale.
 
-(basic_example)=
+(i18n_basic_example)=
 
 ##### Basic example
 
@@ -371,15 +371,13 @@ otherwise skip to the next section that has a more complicated example which tak
 this into account.
 
 ```html+django
-
 {# make sure these are at the top of the file #}
-{% load i18n wagtailcore_tags %}
+{% load wagtailcore_tags %}
 
 {% if page %}
     {% for translation in page.get_translations.live %}
-        {% get_language_info for translation.locale.language_code as lang %}
-        <a href="{% pageurl translation %}" rel="alternate" hreflang="{{ language_code }}">
-            {{ lang.name_local }}
+        <a href="{% pageurl translation %}" rel="alternate" hreflang="{{ translation.locale.language_code }}">
+            {{ translation.locale.language_name_local }}
         </a>
     {% endfor %}
 {% endif %}
@@ -404,26 +402,26 @@ If this is part of a shared base template it may be used in situations where no 
 This `for` block iterates through all published translations of the current page.
 
 ```html+django
-{% get_language_info for translation.locale.language_code as lang %}
-```
-
-This is a Django built-in tag that gets info about the language of the translation.
-For more information, see [get_language_info() in the Django docs](https://docs.djangoproject.com/en/stable/topics/i18n/translation/#django.utils.translation.get_language_info).
-
-```html+django
-<a href="{% pageurl translation %}" rel="alternate" hreflang="{{ language_code }}">
-    {{ lang.name_local }}
+<a href="{% pageurl translation %}" rel="alternate" hreflang="{{ translation.locale.language_code }}">
+    {{ translation.locale.language_name_local }}
 </a>
 ```
 
-This adds a link to the translation. We use `{{ lang.name_local }}` to display
-the name of the locale in its own language. We also add `rel` and `hreflang`
-attributes to the `<a>` tag for SEO.
+This adds a link to the translation. We use `{{ translation.locale.language_name_local }}` to display
+the name of the locale in its own language. We also add `rel` and `hreflang` attributes to the `<a>` tag for SEO.
+`translation.locale` is an instance of the [Locale model](locale_model_ref).
+
+Alternatively, a built-in tag from Django that gets info about the language of the translation.
+For more information, see [get_language_info() in the Django docs](https://docs.djangoproject.com/en/stable/topics/i18n/translation/#django.utils.translation.get_language_info).
+
+```html+django
+{% get_language_info for translation.locale.language_code as lang %}
+```
 
 ##### Handling locales that share content
 
 Rather than iterating over pages, this example iterates over all of the configured
-languages and finds the page for each one. This works better than the [Basic example](basic_example)
+languages and finds the page for each one. This works better than the [Basic example](i18n_basic_example)
 above on sites that have extra Django `LANGUAGES` that share the same Wagtail content.
 
 For this example to work, you firstly need to add Django's
